# swe-pinn

./: .claudeignore  .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  GEMINI.md  README.md  WORKSPACE_STRUCTURE.md  analysis.md  gpu_debug.py  pyproject.toml  requirements.txt  run_job.sh  run_job_L40.sh  run_jobs_temp.sh  test_deeponet_variants.py
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json  install_dependencies.sh  install_requirements.sh  requirements.txt
configs/: adaptive_fourier_pinn.yaml  analytical_deeponet.yaml  analytical_ntk_config.yaml  benchmark_test_1.yaml  benchmark_test_2.yaml  benchmark_test_5.yaml  config_operatornet_analytical.yaml  dgm_datafree_gradnorm_experiment_1.yaml  dgm_datafree_static_experiment_1.yaml  experiment_1.yaml  experiment_1_dgm_gradnorm.yaml  experiment_1_dgm_static.yaml  experiment_1_fourier.yaml  experiment_3.yaml  experiment_3_pix2pix.yaml  experiment_4.yaml  experiment_5.yaml  experiment_6.yaml  experiment_7.yaml  experiment_8.yaml  fourier_fno_config.yaml  pix2pix_test1.yaml
docs/: cleanup_plan.md  developer_guide.md  experiment_1_ablation_design.md  experimental_programme_reference.md  hard_constraint_session_notes.md  hpo_universal_design_analysis.md  is_pool_deviation.md  issues_index.md  l2_loss_experiment.md  pinn_loss_landscape_fixes.md  repo_audit.md  reporting.md  scaling_reference.md
evaluation/: __init__.py
experiments/: dgm_config.yaml  dgm_data_gradnorm_v1.yaml  dgm_datafree_gradnorm.yaml  dgm_datafree_gradnorm_v3.yaml  dgm_datafree_static.yaml  dgm_datafree_static_v2.yaml  dgm_datafree_static_v3.yaml  dgm_datafree_static_v4.yaml  fourier_mapping.yaml  fourier_pinn_config.yaml  one_building_config.yaml  one_building_config_gradnorm.yaml  siren_pinn_config.yaml
hyperopt/: hpo_optimizer.py  hpo_train.py  hyper_optimizer.py
notebook/: analytical_viz.ipynb  benchmark_test_1.ipynb  benchmark_test_5.ipynb  benchmark_test_6.ipynb  data_preprocessing.ipynb
optimisation/: .gitignore  README_REMOTE_STORAGE.md  analyze_importance.py  experiment_registry.py  extract_best_params.py  objective_function.py  optimization_train_loop - new.py  optimization_train_loop.py  run_all_exploitations.sh  run_all_hpo.sh  run_optimization.py  run_sensitivity_analysis.py  utils.py
scripts/: _exp1_ablation_common.sh  benchmark_architectures.py  benchmark_data_transfer.py  benchmark_memory.py  benchmark_pde_jacobian.py  binary_to_numpy.py  cleanup_wandb_artifacts.py  convert_bin_to_npy.py  create_samples.py  create_validation_sample.py  extract_gauge_timeseries.py  extract_gauges.py  filter_by_time.py  filter_sample.py  find_building_footprint.py  generate_training_data.py  infer.py  inspect_mesh_coordinates.py  lidar_download.py  plot_validation_sample.py  prepare_validation_data.py  preprocess_irregular.py  process_gauge_csvs.py  process_gauges_split.py  process_test2_gauges.py  profile_training.py  (+11 more)
scripts/cpp/: CMakeLists.txt  preprocess.cpp
(+289 files in other folders)
